compiler/testData/diagnostics/testsWithJvmBackend/indirectInlineCycle.diag.txt
/indirectInlineCycle.kt:8:24: error: the 'inlineFun2' invocation is a part of inline cycle
        fun method() { inlineFun2(p) }
                       ^
/indirectInlineCycle.kt:13:5: error: the 'inlineFun1' invocation is a part of inline cycle
    inlineFun1(p)
    ^
